--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "EMQX-Auth-Service"]
 	path = EMQX-Auth-Service
 	url = https://github.com/farismnrr/EMQX-Auth-Service.git
+	branch = main
 [submodule "Multitenant-User-Management-Service"]
 	path = Multitenant-User-Management-Service
 	url = https://github.com/farismnrr/Multitenant-User-Management-Service.git
+	branch = main
 [submodule "IoTNet-Core"]
 	path = IoTNet-Core
 	url = https://github.com/i-otnet/IoTNet-Core
+	branch = main
