feat: add github actions workflows

--- a/IoTNet-UI/Makefile
+++ b/IoTNet-UI/Makefile
@@ -76,7 +76,7 @@ start-docker:
 	docker run --rm -it -p 3000:3000 $(DOCKER_IMAGE_NAME):$$tag
 
 # Push to GHCR (reads env vars) - Multi-arch build
-push:
+push-local:
 	@read -p "Enter Docker tag to push (default: latest): " tag; \
 	tag=$${tag:-latest}; \
 	echo "🚀 Pushing to GHCR with multi-arch build (amd64, arm64) - tag: $$tag..."; \
@@ -92,6 +92,10 @@ push:
 		--build-arg NEXT_PUBLIC_TENANT_ID="$$NEXT_PUBLIC_TENANT_ID" \
 		-t $(GHCR_REPO):$$tag --push .; \
 	echo "✅ Image pushed to $(GHCR_REPO):$$tag"
+
+push:
+	@echo "⚠️  Build moved to GitHub Actions. Go to generic/actions to trigger manually."
+	@echo "👉 Use 'make push-local' to push from your local machine."
 
 # --- Docker Compose Configuration ---
 
