--- a/.github/workflows/build-multitenant-user-management.yml
+++ b/.github/workflows/build-multitenant-user-management.yml
@@ -44,6 +44,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./Multitenant-User-Management-Service
+          file: ./Multitenant-User-Management-Service/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
