--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -3,8 +3,13 @@ name: Security Scan
 on:
   push:
     branches: [main, master]
+    paths:
+      - "IoTNet-UI/**"
+      - ".github/workflows/security-scan.yml"
   pull_request:
     branches: [main, master]
+    paths:
+      - "IoTNet-UI/**"
 
 permissions:
   contents: read
@@ -14,6 +19,9 @@ jobs:
   npm-audit:
     name: NPM Security Audit
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./IoTNet-UI
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -23,6 +31,7 @@ jobs:
         with:
           node-version: "20"
           cache: "npm"
+          cache-dependency-path: IoTNet-UI/package-lock.json
 
       - name: Install dependencies
         run: npm ci
@@ -38,7 +47,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: npm-audit-report
-          path: npm-audit-report.json
+          path: IoTNet-UI/npm-audit-report.json
           retention-days: 30
 
   dependency-review:
