Refactor: Remove authentication and account management from frontend
- Deleted auth-related pages (login/register) and profile component.
- Removed auth store and related logic from header and setup pages.
- Standardized Docker and build environment across project and submodules.
- Updated submodules (IoTNet-Core and Multitenant-User-Management-Service) with latest changes.
- Cleaned up Makefiles, Dockerfiles, and environment variable examples.

--- a/.env.example
+++ b/.env.example
@@ -40,4 +40,35 @@ NODE_ENV=
 
 ## Next.js Telemetry
 ## Default: 1 (disabled)
-NEXT_TELEMETRY_DISABLED=
+NEXT_TELEMETRY_DISABLED=1
+
+# =============================================================================
+# Database Configuration
+# =============================================================================
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+DB_PORT=
+
+# =============================================================================
+# Auth Service Configuration (User Management)
+# =============================================================================
+SECRET_KEY=
+API_KEY=
+TENANT_SECRET_KEY=
+JWT_SECRET=
+JWT_ACCESS_TOKEN_EXPIRY=
+JWT_REFRESH_TOKEN_EXPIRY=
+RATE_LIMIT_MAX_REQUESTS=
+RATE_LIMIT_WINDOW_SECS=
+RATE_LIMIT_BLOCK_DURATION_SECS=
+CACHE_TTL=
+ENDPOINT=
+VITE_ALLOWED_ORIGINS=
+GRACE_PERIOD_SECS=
+
+# =============================================================================
+# IoTNet Core Configuration
+# =============================================================================
+LITEDB_FILENAME=
+LITEDB_TTL_MINUTES=
