--- a/.dockerignore
+++ b/.dockerignore
@@ -15,6 +15,11 @@ out/
 build
 dist
 
+# Rust / Backend Artifacts (IMPORTANT: Huge directory)
+**/target/
+**/bin/
+**/obj/
+
 # Production
 .vercel
 
