--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile.dev
     working_dir: /app
     ports:
-      - "${SERVER_PORT}:3000"
+      - "${PORTOFOLIO_PORT}:3000"
       - "${BACKEND_PORT}:8080"
     volumes:
       - ./:/app
@@ -13,7 +13,7 @@ services:
     env_file:
       - .env.dev
     environment:
-      - SERVER_PORT=${SERVER_PORT}
+      - SERVER_PORT=${PORTOFOLIO_PORT}
       - BACKEND_PORT=${BACKEND_PORT}
       - DB_HOST=database
       - DB_PORT=5432
@@ -68,7 +68,7 @@ services:
     env_file:
       - .env.dev
     ports:
-      - "${DB_PORT}:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres_dev_data:/var/lib/postgresql/data
       - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
